@@ -2,6 +2,7 @@ Release Notes for the evrClient and event package
 --------------------------------------------------
 R1.4.4: 2018-08-18 Kukhee Kim (KHKIM)
         * bsaRecord.c, bsaRecord.dbd: send monitors on NORD change
+        * add epicsTimeERROR macro in evrTime.c due to it is removed from epics 7
 
 R1.4.3:  2018-06-28 Kukhee Kim (KHKIM)
         * build against BsaCore R1.4.1
